crates/moss-codegen/tests/snapshots/codegen__go_types_no_tags.snap
---
source: crates/moss-codegen/tests/codegen.rs
assertion_line: 211
expression: output
---
// Auto-generated by moss-codegen

package models

// Address Physical address
type Address struct {
	City string
	Country string
	PostalCode *string
	Street string
}

// Status User account status
type Status string

const (
	StatusPending Status = "pending"
	StatusActive Status = "active"
	StatusSuspended Status = "suspended"
	StatusDeleted Status = "deleted"
)

// User A user account
type User struct {
	Address *Address
	Age *int64
	// Email address
	Email string
	// Unique identifier
	Id string
	Metadata map[string]string
	Name *string
	Status Status
	Tags []string
}
