crates/moss-codegen/tests/snapshots/codegen__python_typeddict_user.snap
---
source: crates/moss-codegen/tests/codegen.rs
assertion_line: 157
expression: output
---
# Auto-generated by moss-codegen

from typing import TypedDict
from typing import Optional, dict, list
from typing import Literal

"""Physical address"""
class Address(TypedDict, total=False):
    city: str
    country: str
    postal_code: str
    street: str

"""User account status"""
Status = Literal[
    "pending",
    "active",
    "suspended",
    "deleted"
]

"""A user account"""
class User(TypedDict, total=False):
    address: Address
    age: int
    # Email address
    email: str
    # Unique identifier
    id: str
    metadata: dict[str, str]
    name: str
    status: Status
    tags: list[str]
