crates/moss-codegen/tests/snapshots/codegen__rust_types_no_serde.snap
---
source: crates/moss-codegen/tests/codegen.rs
assertion_line: 240
expression: output
---
//! Auto-generated by moss-codegen

/// Physical address
#[derive(Debug, Clone, PartialEq)]
pub struct Address {
    pub city: String,
    pub country: String,
    pub postal_code: Option<String>,
    pub street: String,
}

/// User account status
#[derive(Debug, Clone, PartialEq)]
pub enum Status {
    Pending,
    Active,
    Suspended,
    Deleted,
}

/// A user account
#[derive(Debug, Clone, PartialEq)]
pub struct User {
    pub address: Option<Address>,
    pub age: Option<i64>,
    /// Email address
    pub email: String,
    /// Unique identifier
    pub id: String,
    pub metadata: Option<std::collections::HashMap<String, String>>,
    pub name: Option<String>,
    pub status: Status,
    pub tags: Option<Vec<String>>,
}
